services/waiting-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: waiting-service
  labels:
    app: waiting-service
    monitoring: enabled
spec:
  type: ClusterIP
  selector:
    app: waiting-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
