services/waiting-service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: waiting-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: waiting.ticketing.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: waiting-service
                port:
                  number: 8082
